--- a/product-manager.html
+++ b/product-manager.html
@@ -40,10 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://studygroupuk.applytojob.com/apply/hhpMyngAjj/Online-Learning-Product-Manager'>Online Learning Product Manager - Study Group - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/sofi/job/oVgrbfwx'>SoFi Careers - Staff Product Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://hetzner.recruitee.com/o/product-manager'>
       Product Manager - xneelo
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://hellomavis.com/job/senior-product-manager-for-healthcare-app-3/'>Senior Product Manager (for Healthcare App) - Mavis</a></h5> 
@@ -58,7 +66,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/industrious/jobs/1907608'>Job Application for Associate Product Manager at Industrious</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/industrious/jobs/1907608'>Job Application for Associate Product Manager at Industrious</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -66,7 +74,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -92,7 +100,7 @@
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oyqobfwh&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n17VmMwG'>Guidewire Software, Inc. Careers - Senior Product Manager, Digital Apps - Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oyqobfwh&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n17VmMwG'>Guidewire Software, Inc. Careers - Senior Product Manager, Digital Apps - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -124,7 +132,7 @@
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -180,7 +188,7 @@
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
       Product Designer at Input Logic - Nanaimo, BC, Canada - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
@@ -228,7 +236,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
+<h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -236,7 +244,7 @@
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cosential/1010b7c5-df0f-4c0c-8a01-b10866c8feed'>Cosential - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cosential/1010b7c5-df0f-4c0c-8a01-b10866c8feed'>Cosential - Product Manager</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -256,7 +264,7 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24956-Digital-Product-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24956-Digital-Product-Designer?source=twitter'>
       Digital Product Designer at New York Public Radio - Spring Street, NY 10013, USA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -286,7 +294,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hellooffice/f4551972-7b47-4da2-a86c-c14bd6e4bb2f'>HelloOffice - Senior Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hellooffice/f4551972-7b47-4da2-a86c-c14bd6e4bb2f'>HelloOffice - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -294,7 +302,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -302,7 +310,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://authenticjobs.com/jobs/31692?r=rss2'>Authentic Jobs Product Designer at Livefront at Livefront</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://authenticjobs.com/jobs/31692?r=rss2'>Authentic Jobs Product Designer at Livefront at Livefront</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -357,7 +365,7 @@ Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Believe/743999698138532-product-manager-customer-finance-h-f-'>Believe PRODUCT MANAGER - CUSTOMER FINANCE  (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Believe/743999698138532-product-manager-customer-finance-h-f-'>Believe PRODUCT MANAGER - CUSTOMER FINANCE  (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -428,11 +436,11 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4497588002'>Job Application for (Senior) Product Owner Blockchain Factory (f/m/div) at solarisBank AG at solarisBank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4497588002'>Job Application for (Senior) Product Owner Blockchain Factory (f/m/div) at solarisBank AG at solarisBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=osXrbfwL&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nbjLlMwR'>NICE Careers - Product Manager- CXOne</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=osXrbfwL&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nbjLlMwR'>NICE Careers - Product Manager- CXOne</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -454,21 +462,11 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://producthire.net/job/product-manager-m-f-d-for-nx-mechatronics-concept-designer-mcd-sisw/'>Product Manager (m/f/d) for NX Mechatronics Concept designer (MCD) - SISW | PRODUCTHIRE.NET</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://ausdta.recruiterbox.com/jobs/fk03dvi/'>
-    Product Owner - EL 2 at Digital Transformation Agency
-</a></h5> 
-<p><span class="badge badge-light">Canberra</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
